objects/ASI_CRM_Methodology__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default for All Regions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Methodology_Code__c</fullName>
        <label>Methodology Code﻿</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRSF</fullName>
                </value>
                <value>
                    <fullName>PSF</fullName>
                </value>
                <value>
                    <fullName>Variable Event Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Methodology</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chinese_Name__c</columns>
        <columns>ASI_CRM_Default__c</columns>
        <columns>ASI_CRM_Methodology_Code__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_Type__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Methodology__c.ASI_CRM_CN_Methodology</value>
        </filters>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Methodology Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Methodologies</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Methodology</fullName>
        <active>true</active>
        <label>CN Methodology</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>